--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
     <artifactId>maven-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <dependencies>
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
-            <version>2.5.22</version>
+            <version>2.6-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -23,6 +24,20 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/jsp-api -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>6.0.53</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.1.16.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
 
